# server/routers.go
@@ -7,7 +7,7 @@
  * Contact: apa.birds@mail.ru
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package server
 
 import (
 	"fmt"
@@ -77,17 +77,17 @@ var routes = Routes{
 	},
 
 	Route{
-		"AddPet",
+		"AddSong",
 		strings.ToUpper("Post"),
 		"/song",
-		AddPet,
+		AddSong,
 	},
 
 	Route{
-		"DeletePet",
+		"DeleteSong",
 		strings.ToUpper("Delete"),
 		"/song",
-		DeletePet,
+		DeleteSong,
 	},
 
 	Route{
